# extra-imageformats-qt

./: CMakeLists.txt
bpg/: Makefile.libfuif  bpg-decl.h  bpg.desktop  bpghandler.cpp  bpgimage.pro  extensions.json  xdg-bpg.xml
cmake/: FindBPG.cmake  QueryQmake.cmake
fuif/: Makefile  README  extensions.json  fuif-decl.h  fuif.desktop  fuifhandler.cpp  fuifimage.pro  xdg-fuif.xml
fuif/libfuif/: fileio.h  io.h  util.h
fuif/libfuif/encoding/: context_predict.h  encoding.h
fuif/libfuif/export/: write_pam.h  write_png.h  write_yuv.h
fuif/libfuif/image/: image.h
fuif/libfuif/import/: read_gif.h  read_jpeg.h  read_pam.h  read_png.h  read_yuv.h
fuif/libfuif/maniac/: chance.h  compound.h  compound_enc.h  rac.h  rac_enc.h  symbol.h  symbol_enc.h  util.h
fuif/libfuif/transform/: 2dmatch.h  approximate.h  dct.h  palette.h  permute.h  quantize.h  squeeze.h  subsample.h  transform.h  xyb.h  ycbcr.h  ycocg.h
pgf/: extensions.json  pgf-decl.h  pgf.desktop  pgfhandler.cpp  pgfimage.pro  xdg-pgf.xml
